# jacklistener

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  README  TODO  configure.ac  dbus.c  dbus.h  event.c  event.h  main.c  main.h  org.ude.jacklistener.conf  watchdevs.c  watchdevs.h
arch/: PKGBUILD
gentoo/: jacklistener-9999.ebuild
init.d/: jacklistener  jacklistener-openrc  jacklistener-runscript  jacklistener-runscript.in  jacklistener.service  jacklistener.service.in
init.d/arch/: jacklistenerd
init.d/openrc/: jacklistener  jacklistener.in
